# note_sequencer

./: .gitignore  Cargo.toml  README.md  bundle.sh  bundler.toml
src/: lib.rs
