[package]
name = "note_sequencer"
version = "0.1.0"
edition = "2021"
authors = ["Brian Edwards <brian.edwards@jalopymusic.com>"]
license = "GPL-3.0-or-later"
homepage = "https://jalopymusic.com"
description = "Hello world note sequencer plugin"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]

# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }

# use whatever version nih_plug is currently using
time = "*"

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
